# eOn

./: .codespellrc  .gitignore  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  Readme.org  asv.conf.json  codecov.yml  genindex.html  index.html  meson.build  meson_options.txt  objects.inv  pixi.toml  py-modindex.html  pyproject-pyeonclient.toml  pyproject.toml  search.html  searchindex.js  sitemap.xml  team.html  towncrier.toml
.doctrees/: environment.pickle  index.doctree
_modules/: index.html  logging.html
_static/: documentation_options.js
apidocs/: index.html
bench/: commits.json  index.html  index.json  info.json  regressions.json  regressions.xml  site.json
benchmarks/: README.md
client/: ARTnSaddleSearch.cpp  AtomicGPDimer.cpp  BaseStructures.h  BasinHoppingJob.cpp  BasinHoppingSaddleSearch.cpp  BiasedGradientSquaredDescent.cpp  BondBoost.cpp  Bundling.cpp  CMakeLists.txt  ClientEON.cpp  CommandLine.cpp  ConFileIO.cpp  ConFileIO.h  ConjugateGradients.cpp  Davidson.cpp  Dimer.cpp  DimerRotationDispatch.h  Dynamics.cpp  DynamicsJob.cpp  DynamicsSaddleSearch.cpp  EigenmodeStrategy.h  EnvHelpers.cc  EonLogger.h  EpiCenters.cpp  FIRE.cpp  FiniteDifferenceJob.cpp  GPRHelpers.cpp  GPSurrogateJob.cpp  GPSurrogateJob.h  GeometryAnalysis.cpp  GleThermostat.cpp  GleThermostat.h  GlobalOptimization.cpp  GlobalOptimizationJob.cpp  HelperFunctions.cpp  HelperFunctions.h  Hessian.cpp  HessianJob.cpp  IDPPObjectiveFunction.cpp  IRACompare.cpp  (+68 more)
client/potentials/ASE_NWCHEM/: ASE_NWCHEM.cpp  ASE_NWCHEM.h  meson.build
client/potentials/ASE_ORCA/: ASE_ORCA.cpp  ASE_ORCA.h  meson.build
client/potentials/Aluminum/: Aluminum.cpp  Aluminum.h  meson.build
client/potentials/EDIP/: EDIP.cpp  EDIP.h  edipFortran.f90  meson.build
client/potentials/EMT/Asap/: meson.build
client/potentials/FeHe/: FeHe.cpp  FeHe.h  meson.build
client/potentials/Lenosky/: Lenosky.cpp  Lenosky.h  meson.build
client/potentials/Metatomic/: MetatomicCAbi.cpp  MetatomicDynPot.cpp  MetatomicDynPot.h  MetatomicEngineAbi.cpp  MetatomicLoader.cpp  MetatomicLoader.h  MetatomicPotential.cpp  MetatomicPotential.h  meson.build  readme.org
client/potentials/SW/: SW.cpp  SW.h  meson.build
client/potentials/Tersoff/: Tersoff.cpp  Tersoff.h  meson.build
client/python/: README.md  meson.build
client/python/bind/: bind_analysis.cpp  bind_ase.cpp  bind_eigenmode.cpp  bind_enums.cpp  bind_helpers.hpp  bind_jobs.cpp  bind_matter.cpp  bind_neb.cpp  bind_parameters.cpp  bind_potential.cpp  bind_saddle.cpp  bind_sampling.cpp  eigen_numpy.hpp  module.cpp
client/python/pyeonclient/: __init__.py  api.py  ase_bridge.py  backends.py  bridge.py  gpr_overlay.py  models.py  plot.py  steps.py
condaEnvs/: ams.conda-lock.yml  ci-lammps.conda-lock.yml  ci-mta.conda-lock.yml  ci-xtb.conda-lock.yml  cigen.conda-lock.yml  conda-lock.yml  dev-lite.conda-lock.yml  dev-mta.conda-lock.yml  dev-serve-mta.conda-lock.yml  dev-xtb.conda-lock.yml  dev.conda-lock.yml  docs-mta.conda-lock.yml  docs.conda-lock.yml  lammps.conda-lock.yml  metatomic.conda-lock.yml  mta-bench.conda-lock.yml  nwchem.conda-lock.yml  rel.conda-lock.yml  serve.conda-lock.yml
devdocs/: benchmarks.html  docbuild.html  eon-schema.html  index.html  parallel-potentials.html  pyeonclient-pypi.html  pyeonclient.html  release.html  svn-migration.html  svn.html  testing.html  tracking-changes.html
easybuild/: README.md
eon/: __main__.py  _params_ssot_catalog.py  akmc.py  akmcstate.py  akmcstatelist.py  atoms.py  basinhopping.py  blah  communicator.py  communicator_inprocess.py  config.py  config.yaml  displace.py  eon_kdb.py  escaperate.py  explorer.py  fileio.py  meson.build  movie.py  mpiwait.py  parallelreplica.py  params_ssot.py  process_id.py  prstate.py  prstatelist.py  pyeonclient_bridge.py  recycling.py  schema.py  server.py  state.py  statelist.py  structure.py  superbasin.py  superbasinscheme.py
install/: index.html  lammps.html
releases/: changelog.html  index.html
schema/: README.md  eon_params.capnp  eon_params_catalog.json
scripts/: asv_run_history.sh  bench_rgpot_vs_socket_forces.sh  check_codecov_config.sh  compare_metatomic_backends.py  plot_metatomic_backend_bench.py  pyeonclient_build_wheel.sh  pyeonclient_manylinux_deps.sh  pyeonclient_prepare_pyproject.sh  pyeonclient_repair_wheel.sh  pyeonclient_version_assert.py  rgpot_nwchem_vs_socket.sh  run_coverage_cpp.sh  run_coverage_fortran.sh  run_coverage_python.sh  run_eon_workdir_pyeonclient.py  run_metatomic_backend_bench.sh
subprojects/: inih.wrap  readcon-core.wrap  rgpot.wrap
tests/: test_atoms_golden.py  test_atoms_hotpaths.py  test_audit_a_severity_fixes.py  test_communicator_inprocess.py  test_config_metadata.py  test_fileio_readcon.py  test_geometry_vesin.py  test_golden_server_surfaces.py  test_job_result_schema.py  test_local_communicator_stderr.py  test_params_ssot.py  test_process_id_allocation.py  test_pyeonclient_ase.py  test_pyeonclient_ase_calculator.py  test_pyeonclient_backends.py  test_pyeonclient_eigenmode.py  test_pyeonclient_import_surface.py  test_pyeonclient_inplace_and_jobs.py  test_pyeonclient_jobs.py  test_pyeonclient_matter.py  test_pyeonclient_matter_views.py  test_pyeonclient_metatomic_cookbook.py  test_pyeonclient_models.py  test_pyeonclient_neb.py  test_pyeonclient_neb_paths.py  test_pyeonclient_packaging.py  test_pyeonclient_path_frames.py  test_pyeonclient_rgpot_metatomic.py  test_results_dat_timing_footer.py  test_server_dispatch.py  test_structure_readcon.py
tools/: win_pip_torch_path.py
tutorials/: akmc.html  dict_config.html  displacement_scripts.html  index.html  parrep.html  visualization.html
user_guide/: akmc.html  algorithm_selection.html  artn.html  ase_pot.html  basin_hopping.html  coarse_graining.html  communicator.html  debug.html  dimer.html  dynamics.html  ext_pot.html  hessian.html  hyperdynamics.html  index.html  kdb.html  lammps_pot.html  lanczos.html  main.html  metatomic_pot.html  minimization.html  mpi_potential.html  neb.html  optimizer.html  parallel_replica.html  paths.html  potential.html  (+11 more)
(+626 files in other folders)
